force-app/main/default/objects/mp_Quote_Detail_POE__c/mp_Quote_Detail_POE__c.object-meta.xml
<CustomObject>
    <label>Quote Detail</label>
    <nameField>
        <displayFormat>QD-{0000}</displayFormat>
        <label>Quote Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>