force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Available_For__c.field-meta.xml
<CustomField>
    <fullName>Available_For__c</fullName>
    <label>Available For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>72 Hours</fullName>
                <default>true</default>
                <label>72 Hours</label>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>