force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Available_For_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Time__c</fullName>
    <formula>IF( ISPICKVAL(Available_For__c , &apos;72 Hours&apos;) , 72, IF(ISPICKVAL(Available_For__c , &apos;48 Hours&apos;), 48, 24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available For Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>