force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Quote Details</relationshipLabel>
    <relationshipName>Quote_Details_POE</relationshipName>
    <type>Lookup</type>
</CustomField>