force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Details</relationshipLabel>
    <relationshipName>Quote_Details_POE</relationshipName>
    <type>Lookup</type>
</CustomField>