force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Merchant_Currency__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Currency__c</fullName>
    <formula>RBA_Exchange_Rate__r.exchange_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>