force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Merchant_Email__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Email__c</fullName>
    <label>Merchant Email</label>
    <type>Email</type>
</CustomField>