force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Merchant_Currency__c.field-meta.xml
<CustomField>
    <fullName>mp_Merchant_Currency__c</fullName>
    <label>Merchant Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>