force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Merchant_Price__c.field-meta.xml
<CustomField>
    <fullName>mp_Merchant_Price__c</fullName>
    <label>Merchant Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>