force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Merchant_Quoted_Details__c.field-meta.xml
<CustomField>
    <fullName>mp_Merchant_Quoted_Details__c</fullName>
    <label>Merchant Quoted Details</label>
    <type>TextArea</type>
</CustomField>