force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Order_Customisation__c.field-meta.xml
<CustomField>
    <fullName>mp_Order_Customisation__c</fullName>
    <label>Order Customisation</label>
    <referenceTo>Order_Customisations_POE__c</referenceTo>
    <relationshipLabel>Quote Details</relationshipLabel>
    <relationshipName>Quote_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>