force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>mp_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line_POE__c</referenceTo>
    <relationshipLabel>Quote Details</relationshipLabel>
    <relationshipName>Quote_Details_POE</relationshipName>
    <type>Lookup</type>
</CustomField>