force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Quote_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>mp_Quote_Decline_Reason__c</fullName>
    <label>Quote Decline Reason</label>
    <type>TextArea</type>
</CustomField>