force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/mp_Quote_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>mp_Quote_Request_Status__c</fullName>
    <formula>IF(ISPICKVAL( mp_Order_Customisation__r.Status__c , &apos;Quote_Requested&apos;)  , &apos;Pending&apos;,
   IF(ISPICKVAL( mp_Order_Customisation__r.Status__c , &apos;Accepted_and_Paid&apos;)  , &apos;Approved&apos;, 
  IF(ISPICKVAL( mp_Order_Customisation__r.Status__c , &apos;Declined&apos;)  , &apos;Declined&apos;, &apos;NA&apos;)  
) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Status</label>
    <type>Text</type>
</CustomField>