force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Note_Only__c.field-meta.xml
<CustomField>
    <fullName>Note_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Note Only</label>
    <type>Checkbox</type>
</CustomField>