force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>mp_Order_Customisation__r.mp_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>