force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/ordexp_Merchant_Quote_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Merchant_Quote_Approval_Status__c</fullName>
    <label>Merchant Quote Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>