force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Payment_Received_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_DateTime__c</fullName>
    <label>Payment Received DateTime</label>
    <type>DateTime</type>
</CustomField>