force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Quote_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approval_Status__c</fullName>
    <label>Quote Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
                <label>Quote Received</label>
            </value>
            <value>
                <fullName>Decline</fullName>
                <label>Quote Decline</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Quote Requested</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Note Only</fullName>
            </value>
            <value>
                <fullName>CustomerApproved</fullName>
                <label>Customer Accepted</label>
            </value>
            <value>
                <fullName>Quote Sent To Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>