force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/RBA_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>RBA_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RBA Exchange Rate</label>
    <referenceTo>RBA_Exchange_Rate__c</referenceTo>
    <relationshipLabel>Quote Details</relationshipLabel>
    <relationshipName>Quote_Details_POE</relationshipName>
    <type>Lookup</type>
</CustomField>