force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>mp_Order_Customisation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>