force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Requested_Details_new__c.field-meta.xml
<CustomField>
    <fullName>Requested_Details_new__c</fullName>
    <formula>mp_Order_Customisation__r.Requested_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Details</label>
    <type>Text</type>
</CustomField>