force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Spot_Rate_AUD__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate_AUD__c</fullName>
    <formula>IF( OR( mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName == &apos;TAD&apos;, mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName == &apos;TC&apos;), RBA_Exchange_Rate__r.exchange_rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spot Rate AUD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>