force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/TAD_Currency__c.field-meta.xml
<CustomField>
    <fullName>TAD_Currency__c</fullName>
    <formula>IF( 
OR(mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName  = &apos;TAD&apos; ,mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName  = &apos;TC&apos; ),&apos;AUD&apos;, 
IF(
OR(mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName  = &apos;TNZ&apos; ,mp_Order_Customisation__r.mp_tad_order__r.RecordType.DeveloperName  = &apos;WT&apos; ), &apos;NZD&apos;, &apos;&apos;
)
)</formula>
    <label>TAD Currency</label>
    <type>Text</type>
</CustomField>