force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/TAD_Price__c.field-meta.xml
<CustomField>
    <fullName>TAD_Price__c</fullName>
    <label>TAD Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>