force-app/main/default/objects/mp_Quote_Detail_POE__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(mp_Order_Customisation__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>