force-app/main/default/objects/mp_Quote_Detail_POE__c/validationRules/Quote_Approval_Status_Equals_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Approval_Status_Equals_Approve</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Quote_Approval_Status__c , &quot;Approve&quot;),
OR(
 ISNULL( mp_Merchant_Price__c ),
 ISNULL(  mp_Merchant_Quoted_Details__c ),
 
 ISPICKVAL(  Available_For__c , &apos;&apos;))  
)</errorConditionFormula>
    <errorMessage>If Quote Status is &apos;Approve&apos;, Merchant Price, Merchant Currency and Available For cannot be empty.</errorMessage>
</ValidationRule>