force-app/main/default/objects/mp_Quote_Detail_POE__c/validationRules/Quote_Approval_Status_Equals_Decline.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Approval_Status_Equals_Decline</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Quote_Approval_Status__c , &quot;Decline&quot;), 
   ISBLANK( mp_Quote_Decline_Reason__c ) )</errorConditionFormula>
    <errorMessage>If Quote Status is &apos;Decline&apos;, Decline Reason cannot be empty.</errorMessage>
</ValidationRule>